2007-12-05 Dmitry Dulepov  <dmitry@typo3.org>

	* Localized requiredFields_errorWrap
	* Removed "align" attribute from the template

2007-12-04 Dmitry Dulepov  <dmitry@typo3.org>

	* Added date formatting TypoScript setting
	* Updated documentation: added information about TypoScript template
	* Added check for correct inclusion of extension's TypoScript template to main TypoScript template

2007-11-26 Dmitry Dulepov  <dmitry@typo3.org>

	* Added length to mysql index because some mysql versions refused to use TEXT column without length
	* Changed default sorting direction to show last comments first
	* Added wizard to edit associated entry inside comment record

2007-11-18 Dmitry Dulepov  <dmitry@typo3.org>

	* Added plugin to "New content element" wizard
	* Added manual (needs better screenshots)

2007-11-16 Dmitry Dulepov  <dmitry@typo3.org>

	* Enable commenting for pages

2007-11-15 Dmitry Dulepov  <dmitry@typo3.org>

	* Changed setup to enable other extensions to add prefixes
	* Added hook to disable comments for individual items
	* Changed extension's category from "Frontend" to "Frontend plugin"
	* Adjusted page cache expiration if commenting is going to be disabled in future

2007-11-07 Dmitry Dulepov  <dmitry@typo3.org>

	* Made a workaround for pre-4.2 bug where TYPO3 does not correctly handle flexform sheet references (see http://bugs.typo3.org/view.php?id=6581)
	* Removed required attribute for "Close commnting after:" in Advanced tab
	* Use current page if no storage page set
	* Changed prefix in forms and styles from nccomments to comments

2007-10-24 Dmitry Dulepov  <dmitry@typo3.org>

	* Added commenting closing
	* Added many new options in flexform

2007-10-23 Dmitry Dulepov  <dmitry@typo3.org>

	* Changed extkey from nc_comments to comments

2007-10-13 Dmitry Dulepov  <dmitry@typo3.org>

	* Added default captcha support and selection for captcha extension to use
	* Added notification feature
	* Disabled autocomplete for captcha field
